configure init files

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ HARVEST_ACCOUNT_ID=12345
 SLACK_WEBHOOK_URL=https://hooks.slack.com/slack_webhook
 SLACK_TOKEN=slack-token
 EMAIL_WHITELIST=
+ROLLBAR_ACCESS_TOKEN=
