--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 SNITCH_DAILY=
-HARVEST_TOKEN=token
+HARVEST_TOKEN=harvest-token
 HARVEST_ACCOUNT_ID=12345
 SLACK_WEBHOOK_URL=https://hooks.slack.com/slack_webhook
 SLACK_TOKEN=slack-token
-EMAIL_WHITELIST=
+EMAILS_WHITELIST=mia.williams@example.com
 ROLLBAR_ACCESS_TOKEN=
