add slack sender logic

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ HARVEST_TOKEN=token
 HARVEST_ACCOUNT_ID=12345
 SLACK_WEBHOOK_URL=https://hooks.slack.com/slack_webhook
 SLACK_TOKEN=slack-token
+SLACK_CHANNEL=#test
 EMAIL_WHITELIST=
 ROLLBAR_ACCESS_TOKEN=
