--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ SLACK_WEBHOOK_URL=https://hooks.slack.com/slack_webhook
 SLACK_TOKEN=slack-token
 EMAILS_WHITELIST=mia.williams@example.com
 ROLLBAR_ACCESS_TOKEN=
+WEEKLY_REPORT_HOURS=2.0
