--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ HARVEST_TOKEN=harvest-token
 HARVEST_ACCOUNT_ID=12345
 SLACK_WEBHOOK_URL=https://hooks.slack.com/slack_webhook
 SLACK_TOKEN=slack-token
-SLACK_CHANNEL=#test
+SLACK_CHANNEL=test
 EMAILS_WHITELIST=mia.williams@example.com
 ROLLBAR_ACCESS_TOKEN=
