Add weekly report (#7)
* Add weekly report

* rspec and quality

* env fix

* add var to env example

* Refacor report

* my proposed changes

* Revert "my proposed changes"

This reverts commit 36db7edd0612bd10546ea02659c2e90db961a226.

* return only values

* Remove unused deep_merge

* Hide users reject in filter_users_with_reports

* Rename whitelisted_email? to whitelisted_user?

* Reorder methods

Co-authored-by: Timur Vafin <timur.vafin@flatstack.com>

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ SLACK_WEBHOOK_URL=https://hooks.slack.com/slack_webhook
 SLACK_TOKEN=slack-token
 EMAILS_WHITELIST=mia.williams@example.com
 ROLLBAR_ACCESS_TOKEN=
+MISSING_HOURS_THRESHOLD=2.0
