use env to harvest url

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 SNITCH_DAILY=
 HARVEST_TOKEN=harvest-token
 HARVEST_ACCOUNT_ID=12345
+HARVEST_URL=https://harvestapp.com
 SLACK_TOKEN=slack-token
 SLACK_CHANNEL=test
 EMAILS_WHITELIST=mia.williams@example.com
