--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,9 @@ Metrics/BlockLength:
   Exclude:
     - spec/**/*
 
+Metrics/AbcSize:
+  Max: 17
+
 Style/Documentation:
   Description: 'Document classes and non-namespace modules.'
   Enabled: false
