Pass dates from Base to Report

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,9 @@ RSpec/MultipleExpectations:
 RSpec/MessageSpies:
   EnforcedStyle: receive
 
+RSpec/ExampleLength:
+  Max: 10
+
 Metrics/BlockLength:
   Exclude:
     - spec/**/*
