--- a/app.json
+++ b/app.json
@@ -27,15 +27,18 @@
       "required": true
     },
     "EMAILS_WHITELIST": {
+      "description": "EMAILS_WHITELIST is a variable that lists emails separated by commas, which don't need to be notified in Slack. For example, administrators or managers.",
       "required": false
     },
     "HARVEST_URL": {
       "required": false
     },
     "MISSING_HOURS_THRESHOLD": {
+      "description": "MISSING_HOURS_THRESHOLD is a variable that indicates the minimum threshold of hours at which the employee will not be notified in Slack. For example, 2.5 or 4. The default threshold is 1 hour. Leave empty if satisfied with the default value.",
       "required": false
     },
     "SLACK_CHANNEL": {
+      "description": "Default channel is general. Leave empty if satisfied with the default value.",
       "required": false
     }
   },
