fix tempate app
- update rollbar add-on name (current one doesn't exist)
- pin heroku stack to 18 so this version of ruby works

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "name": "Harvest Notifier",
   "description": "Automatic notification script for Slack based on Harvest data",
   "repository": "https://github.com/fs/harvest-notifier/",
+  "stack": "heroku-18",
   "keywords": [
     "harvest",
     "notification",
@@ -45,7 +46,7 @@
   "addons": [
     "deadmanssnitch:the-lone-snitch",
     "scheduler:standard",
-    "rollbar:free"
+    "rollbar:trial-5k"
   ],
   "buildpacks": [
     {
